# keripy-theatrical

./: README.md  main.py  pyproject.toml
src/keripy_theatrical/: install.py  theatrical.py  uninstall.py  utils.py
src/keripy_theatrical/patchers/: keripy.py
