[project]
name = "keripy-theatrical"
version = "0.1.1"
description = "Monkey-patches for keripy to make it more verbose and theatrical when it comes to unexpected things."
authors = [
  { name="Tim Sterker", email="tim.sterker@gleif.org" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keri>=1.1.17",
]